cmake_minimum_required (VERSION 2.6)

project (Tutorial)

set (CMAKE_CXX_STANDARD 11)

add_executable(array src/array.cpp)

add_executable(conditional_if src/conditional_if.cpp)

add_executable(for_loop src/for_loop.cpp)

add_executable(functions src/functions.cpp)

add_executable(hello_world src/hello_world.cpp)

add_executable(input_output src/input_output.cpp)

add_executable(pointer_intro src/pointer_intro.cpp)

add_executable(stringstream src/stringstream.cpp)

add_executable(struct_intro src/struct_intro.cpp)

add_executable(varible_array src/varible_array.cpp)