cmake_minimum_required (VERSION 2.6)

project (Tutorial)

set (CMAKE_CXX_STANDARD 11)

add_executable(accessing_inherited src/accessing_inherited.cpp)

add_executable(array src/array.cpp)

add_executable(attending-workshops src/attending-workshops.cpp)

add_executable(box_it src/box_it.cpp)

add_executable(class_intro src/class_intro.cpp)

add_executable(class_template src/class_template.cpp)

add_executable(classes_objects src/classes_objects.cpp)

add_executable(class-template-specialization src/class-template-specialization.cpp)

add_executable(conditional_if src/conditional_if.cpp)

add_executable(deque_stl src/deque_stl.cpp)

add_executable(exceptional_server src/exceptional_server.cpp)

add_executable(for_loop src/for_loop.cpp)

add_executable(functions src/functions.cpp)

add_executable(hello_world src/hello_world.cpp)

add_executable(inheritance_intro src/inheritance_intro.cpp)

add_executable(inherited_code src/inherited_code.cpp)

add_executable(input_output src/input_output.cpp)

add_executable(lower_bound src/lower_bound.cpp)

add_executable(magic-spells src/magic-spells.cpp)

add_executable(overload_operators src/overload_operators.cpp)

add_executable(overloading-ostream-operator src/overloading-ostream-operator.cpp)

add_executable(pointer_intro src/pointer_intro.cpp)

add_executable(preprocessor src/preprocessor.cpp)

add_executable(rectangle_area src/rectangle_area.cpp)

add_executable(sets src/sets.cpp)

add_executable(stringstream src/stringstream.cpp)

add_executable(struct_intro src/struct_intro.cpp)

add_executable(varible_array src/varible_array.cpp)

add_executable(vector_erase src/vector_erase.cpp)

add_executable(vector_sort src/vector_sort.cpp)

add_executable(virtual_functions src/virtual_functions.cpp)

add_executable(maximum-draws src/maximum-draws.cpp)

add_executable(lowest-triangle src/lowest-triangle.cpp)

add_executable(sock-merchant src/sock-merchant.cpp)

add_executable(drawing-book src/drawing-book.cpp)

add_executable(save-the-prisoner src/save-the-prisoner.cpp)

add_executable(jumping-on-clouds src/jumping-on-clouds.cpp)

add_executable(equality-in-array src/equality-in-array.cpp)

add_executable(electronics-shop src/electronics-shop.cpp)

add_executable(strange-advertising src/strange-advertising.cpp)

add_executable(print-elements-linkedlist src/print-elements-linked-list.cpp)

add_executable(insert-node-tail src/insert-node-tail.cpp)

add_executable(array_manip src/array_manip.cpp)

add_executable(attrib_parser src/attrib_parser.cpp)